[package]
name = "reth-focil"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-consensus = "0.5.3"
alloy-eips = "0.5.3"
alloy-primitives = { version = "0.8.7", default-features = false }
alloy-rlp = "0.3.4"
alloy-rpc-types = { version = "0.4.2", default-features = false, features = ["engine"] }
clap = { version = "4.5.20", features = ["derive"] }
eyre = "0.6.12"
jsonrpsee = { version = "0.24.7", features = ["server", "macros"] }
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
serde = { version = "1.0.213", features = ["derive"] }
tracing = "0.1.40"
